--- a/style.css
+++ b/style.css
@@ -1,8 +1,68 @@
+html {
+  font-size: 10px;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-rows: minmax(1rem, auto);
+  grid-template-areas:
+    ". . titre . ."
+    ". input input submit ."
+    ". ul ul ul ."
+    ". . darkMode . .";
+  grid-gap: 1rem;
+}
+
 body.darkMode {
   color: white;
   background-color: black;
 }
 
+h1 {
+  grid-area: titre;
+  font-size: 2rem;
+}
+
+input {
+  grid-area: input;
+  border-radius: 1.5rem;
+  -webkit-border-radius: 1.5rem;
+  -moz-border-radius: 1.5rem;
+  -ms-border-radius: 1.5rem;
+  -o-border-radius: 1.5rem;
+}
+
+ul {
+  grid-area: ul;
+}
+
+li {
+  font-size: 1.5rem;
+}
+
 ul li.checked {
   text-decoration: line-through;
+}
+
+#submit {
+  grid-area: submit;
+  font-size: 1rem;
+  border-radius: 1.5rem;
+  -webkit-border-radius: 1.5rem;
+  -moz-border-radius: 1.5rem;
+  -ms-border-radius: 1.5rem;
+  -o-border-radius: 1.5rem;
+}
+
+.close {
+  grid-area: submit;
+}
+
+#buttonDarkMode {
+  grid-area: darkMode;
 }
