Adding border box for body

--- a/style.css
+++ b/style.css
@@ -11,18 +11,21 @@ body {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-auto-rows: minmax(1rem, auto);
-  grid-template-areas:
-    ". . titre . ."
-    ". input input submit ."
-    ". ul ul ul ."
-    ". . darkMode . .";
+  grid-template-areas: ". . titre . ." ". input input submit ." ". ul ul ul ." ". . darkMode . .";
   grid-gap: 1rem;
   margin-top: 25vh;
+  border: 0.75rem solid black;
+  border-radius: 4em;
+  -webkit-border-radius: 4em;
+  -moz-border-radius: 4em;
+  -ms-border-radius: 4em;
+  -o-border-radius: 4em;
 }
 
 body.darkMode {
   color: white;
   background-color: black;
+  border: 0.75rem solid rgb(86, 177, 13);
 }
 
 h1 {
@@ -44,7 +47,7 @@ ul {
 }
 
 li {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-areas: "li .  close";
